--- a/src/UmbracoProject/appsettings.Production.json
+++ b/src/UmbracoProject/appsettings.Production.json
@@ -12,6 +12,9 @@
   },
   "Umbraco": {
     "CMS": {
+      "ModelsBuilder": {
+        "ModelsMode": "Nothing"
+      },
       "Hosting": {
         "Debug": false
       },
