--- a/src/UmbracoProject/appsettings.Local.json
+++ b/src/UmbracoProject/appsettings.Local.json
@@ -20,7 +20,9 @@
   "Umbraco": {
     "CMS": {
       "ModelsBuilder": {
-        "ModelsMode": "Nothing"
+        "ModelsMode": "SourceCodeAuto",
+        "ModelsDirectory": "~/../UmbracoProject.Code/PublishedModels",
+        "AcceptUnsafeModelsDirectory": true
       },
       "Content": {
         "MacroErrors": "Throw"
