Added custom code

--- a/src/UmbracoProject/UmbracoProject.csproj
+++ b/src/UmbracoProject/UmbracoProject.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Octokit" Version="13.0.1" />
     <PackageReference Include="Umbraco.Cloud.Cms" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.1.0" />
