--- a/src/UmbracoProject.Code/UmbracoProject.Code.csproj
+++ b/src/UmbracoProject.Code/UmbracoProject.Code.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Octokit" Version="13.0.1" />
     <PackageReference Include="Umbraco.Cms.Core" Version="13.5.1" />
     <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.5.1" />
   </ItemGroup>
